--- a/index.html
+++ b/index.html
@@ -9,7 +9,64 @@
     <title>CALCULADORA</title>
 </head>
 <body>
-<div id="contenedor">
+
+<div id="calc">
+    <div id="resultado w100">
+        <div class="formula w100">0</div>
+        <div class="valor w100 ">0</div>
+    </div>
+    <div id="botonera w100">
+        <div class="fila w100"> 
+            
+            <div class="columna w40">on/off</div>
+            <div class="columna w20">CE</div>
+            <div class="columna w20">C</div>
+            <div class="columna w20">%</div>
+        </div>
+        <div class="fila w100">
+            <div class="columna w25">7</div>
+            <div class="columna w25">8</div>
+            <div class="columna w25">9</div>
+            <div class="columna w25">/</div>
+        </div>
+        <div class="fila w100">
+            <div class="columna w25">4</div>
+            <div class="columna w25">5</div>
+            <div class="columna w25">6</div>
+            <div class="columna w25">*</div>
+        </div>
+        <div class="fila w100">
+            <div class="columna w25">1</div>
+            <div class="columna w25">2</div>
+            <div class="columna w25">3</div>
+            <div class="columna w25">-</div>
+        </div>
+        <div class="fila w100">
+            <div class="columna w25">
+                0
+            </div>
+            <div class="columna w25">
+                .
+            </div>
+            <div class="columna w25">
+                =
+            </div>
+            <div class="columna w25">
+                +
+        </div>
+    </div>
+</div>
+
+    
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<div id="contenedor" style="display: none;">
     <div id="pantalla">
             <p>0</p>
             <p>0</p>
