--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div id="calculador">
-    <div class="w100">
+    <div class="display">
         <div id="resultado" class="valor w100 ">&nbsp</div>
         <div id="formula" class="formula w100">&nbsp</div>
         
@@ -19,16 +19,16 @@
     <div id="botonera w100">
         <div class="fila w100"> 
             <div class="columna w20">
-                <button class="btn-calc" >sen</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('sen')">sen</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >cos</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('cos')">cos</button>
             </div><div class="columna w20">
-                <button class="btn-calc" >tan</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('tan')">tan</button>
             </div><div class="columna w20">
-                <button class="btn-calc" >&#960;</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('pi')">&#960;</button>
             </div><div class="columna w20">
-                <button class="btn-calc" >&#69;&#88;&#80;</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('exp')">&#69;&#88;&#80;</button>
             </div>
         </div>
         <div class="fila w100">
@@ -39,47 +39,47 @@
                 <button class="btn-calc" onclick="calculadora.borrar()">CE</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >C</button>
+                <button class="btn-calc" onclick="calculadora.borrarTodo()">C</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >&#40;</button>
+                <button class="btn-calc"onclick="calculadora.anyadirValor('(')" >&#40;</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >&#41;</button>
-            </div>
-        </div>
-        <div class="fila w100">
-            <div class="columna w20">
-                <button class="btn-calc" >7</button>
-            </div>
-            <div class="columna w20">
-                <button class="btn-calc" >8</button>
-            </div>
-            <div class="columna w20">
-                <button class="btn-calc" >9</button>
-            </div>
-            <div class="columna w20">
-                <button class="btn-calc" >&#37;</button>
-            </div>
-            <div class="columna w20">
-                <button class="btn-calc" >&radic;</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor(')')">&#41;</button>
             </div>
         </div>
         <div class="fila w100">
             <div class="columna w20">
-                <button class="btn-calc" >4</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('7')">7</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >5</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('*8')">8</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >6</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('9')">9</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" onclick="calculadora.anyadirValor('*')">&#47;</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('%')">&#37;</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >&#8270;</button>
+                <button class="btn-calc"onclick="calculadora.anyadirValor('radic')" >&radic;</button>
+            </div>
+        </div>
+        <div class="fila w100">
+            <div class="columna w20">
+                <button class="btn-calc" onclick="calculadora.anyadirValor('4')">4</button>
+            </div>
+            <div class="columna w20">
+                <button class="btn-calc" onclick="calculadora.anyadirValor('5')">5</button>
+            </div>
+            <div class="columna w20">
+                <button class="btn-calc" onclick="calculadora.anyadirValor('6')">6</button>
+            </div>
+            <div class="columna w20">
+                <button class="btn-calc" onclick="calculadora.anyadirValor('/')">&#47;</button>
+            </div>
+            <div class="columna w20">
+                <button class="btn-calc" onclick="calculadora.anyadirValor('*')">&#8270;</button>
             </div>
         </div>
         <div class="fila w100">
@@ -87,24 +87,24 @@
                 <button class="btn-calc" onclick="calculadora.anyadirValor('1')">1</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >2</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('2')">2</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >3</button>
+                <button class="btn-calc"onclick="calculadora.anyadirValor('3')">3</button>
             </div>
             <div class="columna w20">
                 <button class="btn-calc" onclick="calculadora.anyadirValor('+')">&#43;</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >&#8722;</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('-')">&#8722;</button>
             </div>
         </div>
         <div class="fila w100">
             <div class="columna w40">
-                <button class="btn-calc" >0</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('0')" >0</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" >&#8228;</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('.')">&#8228;</button>
             </div>
             <div class="columna w40">
                 <button class="btn-calc" onclick="calculadora.calcularResultado()">&#8215;</button>
