--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div id="botonera w100">
         <div class="fila w100"> 
             <div class="columna w20">
-                <button class="btn-calc" onclick="calculadora.anyadirValor('sen')">sen</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('Math.asin')">sen</button>
             </div>
             <div class="columna w20">
                 <button class="btn-calc" onclick="calculadora.anyadirValor('cos')">cos</button>
             </div><div class="columna w20">
                 <button class="btn-calc" onclick="calculadora.anyadirValor('tan')">tan</button>
             </div><div class="columna w20">
-                <button class="btn-calc" onclick="calculadora.anyadirValor('pi')">&#960;</button>
+                <button class="btn-calc" onclick="calculadora.anyadirPI(PI)">&#960;</button>
             </div><div class="columna w20">
                 <button class="btn-calc" onclick="calculadora.anyadirValor('exp')">&#69;&#88;&#80;</button>
             </div>
@@ -53,7 +53,7 @@
                 <button class="btn-calc" onclick="calculadora.anyadirValor('7')">7</button>
             </div>
             <div class="columna w20">
-                <button class="btn-calc" onclick="calculadora.anyadirValor('*8')">8</button>
+                <button class="btn-calc" onclick="calculadora.anyadirValor('8')">8</button>
             </div>
             <div class="columna w20">
                 <button class="btn-calc" onclick="calculadora.anyadirValor('9')">9</button>
