cambios de codigo

--- a/index.html
+++ b/index.html
@@ -19,33 +19,27 @@
             <div id="formula" class="formula w100">&nbsp</div>
         </div>
         <div id="botonera" class="w100">
-            <button class="btn-calc" value="Math.asin()"></button>
-            <button class="btn-calc" >cos</button>
-            <button class="btn-calc" >tan</button>
-            <button class="btn-calc" >&#69;&#88;&#80;</button>
-            <button class="btn-calc" >on/off</button>
+           
+            <button class="btn-calc encendido" >on/off</button>
             <button class="btn-calc" >CE</button>
             <button class="btn-calc" >C</button>
-            <button class="btn-calc" >&#40;</button>
-            <button class="btn-calc" >&#41;</button>
+            <button class="btn-calc" >/</button>
+            
             <button class="btn-calc" >7</button>
             <button class="btn-calc" >8</button>
             <button class="btn-calc" >9</button>
-            <button class="btn-calc" >&#37;</button>
-            <button class="btn-calc" >&radic;</button>
+            <button class="btn-calc" >*</button>
             <button class="btn-calc" >4</button>
             <button class="btn-calc" >5</button>
             <button class="btn-calc" >6</button>
-            <button class="btn-calc" >&#47;</button>
-            <button class="btn-calc" >*</button>
+            <button class="btn-calc" >+</button>  
             <button class="btn-calc" >1</button>
             <button class="btn-calc" >2</button>
             <button class="btn-calc" >3</button>
-            <button class="btn-calc" >&#43;</button>
-            <button class="btn-calc" >&#8722;</button>
+            <button class="btn-calc" >-</button>
+            <button class="btn-calc" >.</button>
             <button class="btn-calc" >0</button>
-            <button class="btn-calc" >&#8228;</button>
-            <button class="btn-calc" value="=">=</button>
+            <button class="btn-calc" >=</button>
         </div>
     </div>
     <script src='javascript/MiCalculadora.js'></script>
