cambio color boton on off

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="botonera" class="w100">
            
-            <button class="btn-calc encendido" >on/off</button>
+            <button id="encendido" class="btn-calc" >on/off</button>
             <button class="btn-calc" >CE</button>
             <button class="btn-calc" >C</button>
             <button class="btn-calc" >/</button>
